--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,11 @@ a.grey:hover {
   color: var(--primary-txt-color);
 }
 
+a.red,
+a.red:hover {
+  color: var(--red);
+}
+
 .info-text {
   margin-top: 0.5rem;
   font-size: 1rem;
