--- a/src/index.css
+++ b/src/index.css
@@ -47,27 +47,8 @@ section.hero {
   padding-bottom: 0rem;
 }
 
-.btn {
-  padding: 0.5rem 0.75rem;
-  font-size: 0.9rem;
-  font-family: var(--font-lexend);
-  background: none;
-  border: none;
-  border-radius: 4px;
-  background-color: var(--secondary-bg-color);
-  color: var(--primary-txt-color);
-  border: 1px solid var(--border-color);
-  box-shadow: var(--box-shadow);
-  -webkit-box-shadow: var(--box-shadow);
-  -moz-box-shadow: var(--box-shadow);
-}
-
-.btn:hover {
-  color: var(--primary-txt-color);
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  cursor: pointer;
+a.btn:hover {
+  text-decoration: none;
 }
 
 a {
@@ -94,10 +75,40 @@ a.red:hover {
   color: var(--red);
 }
 
+.btn {
+  padding: 0.5rem 0.75rem;
+  font-size: 0.9rem;
+  font-family: var(--font-lexend);
+  background: none;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--secondary-bg-color);
+  color: var(--primary-txt-color);
+  border: 1px solid var(--border-color);
+  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+  -moz-box-shadow: var(--box-shadow);
+}
+
+.btn:hover {
+  color: var(--primary-txt-color);
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  cursor: pointer;
+}
+
 .info-text {
   margin-top: 0.5rem;
   font-size: 1rem;
   color: var(--secondary-txt-color);
+}
+
+.page-flex-header {
+  display: flex;
+  justify-content: space-between;
+  /* gap: 2rem; */
+  align-items: center;
 }
 
 input,
